# pivot-os

./: .gdb_history  Cargo.toml  Makefile  acpi.rs  bootx64.efi  build.rs  entry.c  fat2.img  graphics.rs  lib.rs  loader.rs  logger.rs  main.rs  mem.rs  mkgpt.sh
bootloader/: Cargo.toml
bootloader/src/: acpi.rs  framebuffer.rs  gdt.rs  graphics.rs  level_4_entries.rs  load_kernel.rs  loader.rs  logger.rs  main.rs  mem.rs  memory_descriptor.rs  serial.rs
common/: Cargo.toml
common/src/: framebuffer.rs  lib.rs  logger.rs
esp/: NvVars
kernel/: Cargo.toml  kernel.c
kernel/cpu/: acpi.c  idt.c  paging.c
kernel/drivers/: log.c  screen.c
kernel/include/: acpi.h  bootparam.h  log.h  mem.h  paging.h  screen.h  string.h
kernel/libc/: mem.c  string.c
kernel/src/: gdt.rs  logger.rs  main.rs  mem.rs
kernel/src/cpu/: gdt.rs  idt.rs
kernel/src/drivers/: framebuffer.rs
src/: main.rs
