[package]
name = "pivot-os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "bootloader", "common", "kernel" ]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[build-dependencies]
bootloader = { path = "bootloader", artifact = "bin", target = "x86_64-unknown-uefi" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
fatfs = "0.3.6"
tempfile = "3.10.1"

[workspace.dependencies]
common = { path = "common" }
