[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
once_cell = { version = "1.19.0", default-features = false }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "rwlock", "spin_mutex"] }
uart_16550 = "0.3.0"
uefi = { version = "0.28.0", features = ["alloc", "global_allocator", "logger", "panic_handler", "qemu"] }
