[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.7"
conquer-once = { version = "0.4.0", default-features = false }
log = "0.4.21"
noto-sans-mono-bitmap = { version = "0.3.0", default-features = false, features = ["regular", "size_20", "unicode-basic-latin", "unicode-specials"] }
spinning_top = "0.3.0"
uart_16550 = "0.3.0"
uefi = { version = "0.28.0", features = ["panic_handler"] }
x86_64 = "0.15.1"
xmas-elf = "0.9.1"
common = { workspace = true }